# AgentArk

./: .env.example  .gitattributes  .gitignore  LICENSE  README.md  README.zh-CN.md  pyproject.toml  requirements.txt  skills-lock.json
docs/: evaluation-guide.md  evaluation-guide.zh-CN.md  rl-training.md  rl-training.zh-CN.md  runtime-sandbox-migration.md  runtime-sandbox-migration.zh-CN.md  setup.md  setup.zh-CN.md
integrations/: README.md  README.zh-CN.md
integrations/ms_swift/: ARCHITECTURE.zh-CN.md  README.md  pyproject.toml
integrations/ms_swift/configs/: agentark_grpo.env.example
integrations/ms_swift/scripts/: check_agentark_server.py  check_ticket_capacity.py  generate_tickets.py  run_agentark_grpo.sh  run_agentark_server.sh  smoke_agentark_unity.sh  smoke_unity_group.py
integrations/ms_swift/scripts/compat/: sitecustomize.py
integrations/ms_swift/src/agentark_swift/: __init__.py  client.py  env.py  heartbeat.py  messages.py  plugin.py  rollout_cleanup.py  scheduler.py
integrations/ms_swift/tests/: __init__.py  _fakes.py  test_agentark_env.py  test_agentark_scheduler.py  test_heartbeat.py  test_http_client.py  test_messages_and_plugin.py  test_rollout_cleanup.py  test_ticket_scripts.py
scripts/: run_env_server_mlagents.sh
tests/: test_ark_env_rollout_semantics.py  test_ark_sub_env_static.py  test_cli_action_sequence.py  test_dotenv_loading.py  test_env_parallel_client_demo.py  test_env_server_protocol_v2.py  test_env_session_manager_v2.py  test_func_render_error_semantics.py  test_interaction_hooks.py  test_mlagents_close_compat.py  (+8 more)
(+80 files in other folders)
