[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-ark"
version = "0.1.0"
description = "An open-ended training and evaluation environment for multimodal agents"
authors = [
    { name = "P90-RushB" }
]
license = { text = "Apache-2.0" }
dependencies = [
    "PyYAML>=6.0.1",
    "hydra-core>=1.3.2",
    "omegaconf>=2.3.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "requests>=2.31.0",
    "openai>=1.30.0",
    "numpy>=1.23.5,<1.24.0",
    "Pillow>=10.0.0",
    "mlagents_envs==1.1.0",
    "pandas>=2.0.0",
    "pyarrow>=12.0.0",
]
readme = "README.md"
requires-python = ">=3.10,<3.10.13"

[project.optional-dependencies]
codex = [
    "openai-codex>=0.1.0b3",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
agent_ark = [
    "ark_env/info/system_prompt.txt",
    "ark_env/info/system_prompt_func.txt",
    "ark_env/info/system_prompt_func_zh.txt",
]
