[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "agentark-swift"
version = "0.1.0"
description = "Lightweight ms-swift GRPO adapter for the AgentArk environment server"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27,<1",
    "ms-swift==4.4.1",
    "PyYAML>=6.0",
]

[tool.setuptools.packages.find]
where = ["src"]
